  https://sourceforge.net/p/omegat/feature-requests/918/

  - Keyboard shortcut for "clear target segment"
  https://sourceforge.net/p/omegat/feature-requests/622/

  - Update to new pixel logos and improve macOS UI logos
  https://github.com/omegat-org/omegat/pull/154

  - Changing the flow of updating teamwork omegat.project
  https://github.com/omegat-org/omegat/pull/122

  Bug fixes:

  - Fixed "null" file names in search results when "Display: file names" checkbox was unchecked
  https://sourceforge.net/p/omegat/bugs/1154/

  - OmegaT does not create a backup of the project file for standalone projects.

  -Javadoc build failure. Suppress doclint errors for Maven publishing.

  - Change key to explicit offline mode cause
  https://sourceforge.net/p/omegat/bugs/1153

  - Wrap long lines in error messages
  https://sourceforge.net/p/omegat/bugs/1145

  - Color the fuzzy matches from /tm/mt
  https://sourceforge.net/p/omegat/bugs/1144

  - BidiMarker does not respect disable menu action
  https://sourceforge.net/p/omegat/bugs/1143/

  - Fix context-bound matches in TMX that were ignored in /tm/auto
  https://sourceforge.net/p/omegat/bugs/1140/

  - MT cache cleared on saving or committing translation to memory
  https://sourceforge.net/p/omegat/bugs/1139/

  - XML/DocBook filter breaks project load when XML has error
  https://sourceforge.net/p/omegat/bugs/1138/

  - Error displayed when opening a project on Windows 10
  https://sourceforge.net/p/omegat/bugs/1136/

  - Font Rendering issue in OmegaT (Santali)
  https://sourceforge.net/p/omegat/bugs/1133/

  - Plugin loader does not allow multiple entries of OmegaT-Plugins/Category
  https://sourceforge.net/p/omegat/bugs/1128/

  - Local project does not update after remote masking some files
  https://sourceforge.net/p/omegat/bugs/1124/

  - MainMenuShortcuts.properties not up to date
  https://sourceforge.net/p/omegat/bugs/1121/

  - When converting git local-managed project, OmegaT raise NPE